@@ -39,7 +39,6 @@ import org.airsonic.player.repository.MusicFileInfoRepository;
 import org.airsonic.player.repository.OffsetBasedPageRequest;
 import org.airsonic.player.repository.StarredMediaFileRepository;
 import org.airsonic.player.service.cache.MediaFileCache;
-import org.airsonic.player.service.cue.CueParser;
 import org.airsonic.player.service.metadata.Chapter;
 import org.airsonic.player.service.metadata.FFmpegParser;
 import org.airsonic.player.service.metadata.JaudiotaggerParser;
@@ -50,7 +49,9 @@ import org.airsonic.player.util.FileUtil;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang.StringUtils;
 import org.apache.commons.lang3.tuple.Pair;
+import org.digitalmediaserver.cuelib.CueParser;
 import org.digitalmediaserver.cuelib.CueSheet;
+import org.digitalmediaserver.cuelib.FileData;
 import org.digitalmediaserver.cuelib.Position;
 import org.digitalmediaserver.cuelib.TrackData;
 import org.digitalmediaserver.cuelib.io.FLACReader;
@@ -133,10 +134,6 @@ public class MediaFileService {
     private final Set<String> CUE_EXTENSIONS = Set.of("cue", "flac");
 
     private final Map<Integer, Pair<Integer, Instant>> lastPlayed = new ConcurrentHashMap<>();
-
-    // Maximum length for VARCHAR columns as defined by Liquibase ${varchar_type}.
-    // On MySQL/MariaDB the default is 1024; on HSQLDB/PostgreSQL there is no hard limit.
-    static final int MAX_VARCHAR_LENGTH = 1024;
 
     private boolean hasBOM(byte[] bom, int bytesRead) {
         return bytesRead == 3 && bom[0] == (byte) 0xEF && bom[1] == (byte) 0xBB && bom[2] == (byte) 0xBF;
@@ -405,8 +402,7 @@ public class MediaFileService {
         if (CollectionUtils.isEmpty(folders)) {
             return Collections.emptyList();
         }
-        return mediaFileRepository.findByFolderInAndMediaTypeInAndPresentTrue(folders, MediaType.playableTypes(), new OffsetBasedPageRequest(offset, count, Sort.by("id")))
-                .stream().filter(this::showMediaFile).toList();
+        return mediaFileRepository.findByFolderInAndMediaTypeInAndPresentTrue(folders, MediaType.playableTypes(), new OffsetBasedPageRequest(offset, count, Sort.by("id")));
     }
 
     /**
@@ -417,8 +413,7 @@ public class MediaFileService {
      * @return All songs in the album.
      */
     public List<MediaFile> getSongsForAlbum(String artist, String album) {
-        return mediaFileRepository.findByAlbumArtistAndAlbumNameAndMediaTypeInAndPresentTrue(artist, album, MediaType.audioTypes(), Sort.by("discNumber", "trackNumber"))
-                .stream().filter(this::showMediaFile).toList();
+        return mediaFileRepository.findByAlbumArtistAndAlbumNameAndMediaTypeInAndPresentTrue(artist, album, MediaType.audioTypes(), Sort.by("discNumber", "trackNumber"));
     }
 
     /**
@@ -434,8 +429,7 @@ public class MediaFileService {
         if (CollectionUtils.isEmpty(musicFolders)) {
             return Collections.emptyList();
         }
-        return mediaFileRepository.findByFolderInAndMediaTypeInAndGenreAndPresentTrue(musicFolders, MediaType.audioTypes(), genre, new OffsetBasedPageRequest(offset, count, Sort.by("id")))
-                .stream().filter(this::showMediaFile).toList();
+        return mediaFileRepository.findByFolderInAndMediaTypeInAndGenreAndPresentTrue(musicFolders, MediaType.audioTypes(), genre, new OffsetBasedPageRequest(offset, count, Sort.by("id")));
     }
 
     /**
@@ -447,8 +441,7 @@ public class MediaFileService {
      * @return Songs by the artist.
      */
     public List<MediaFile> getSongsByArtist(int offset, int count, String artist) {
-        return mediaFileRepository.findByMediaTypeInAndArtistAndPresentTrue(MediaType.audioTypes(), artist, new OffsetBasedPageRequest(offset, count, Sort.by("id")))
-                .stream().filter(this::showMediaFile).toList();
+        return mediaFileRepository.findByMediaTypeInAndArtistAndPresentTrue(MediaType.audioTypes(), artist, new OffsetBasedPageRequest(offset, count, Sort.by("id")));
     }
 
     /**
@@ -580,8 +573,7 @@ public class MediaFileService {
      */
     @Transactional
     public List<Genre> updateGenres(List <Genre> genres) {
-        genreRepository.saveAll(genres);
-        return genres;
+        return genreRepository.saveAll(genres);
     }
 
     /**
@@ -830,106 +822,38 @@ public class MediaFileService {
 
         // cue tracks
         if (isEnableCueIndexing) {
-            // Separate external .cue files from embedded .flac cue sheets so that
-            // external CUE sheets take priority. When a .flac file has an embedded
-            // CUE and an external .cue file also exists for the same base audio,
-            // the external .cue should be used and the embedded CUE silently ignored.
-            Map<String, CueSheet> externalCueSheets = new ConcurrentHashMap<>();
-            Map<String, CueSheet> embeddedCueSheets = new ConcurrentHashMap<>();
-            cueSheets.forEach((indexPath, cueSheet) -> {
-                if (FilenameUtils.getExtension(indexPath).equalsIgnoreCase("cue")) {
-                    externalCueSheets.put(indexPath, cueSheet);
-                } else {
-                    embeddedCueSheets.put(indexPath, cueSheet);
-                }
-            });
-
-            // Process external .cue files first.
-            List<MediaFile> indexedTracks = externalCueSheets.entrySet().parallelStream().flatMap(e -> {
+            // Sequential outer stream: each FILE block mutates shared scan state (bareFiles.remove,
+            // storedChildrenMap) without synchronization, so iterating cue sheets in parallel was a
+            // latent data race. A directory holds few cue sheets, so sequential costs nothing.
+            List<MediaFile> indexedTracks = cueSheets.entrySet().stream().flatMap(e -> {
                 String indexPath = e.getKey();
                 CueSheet cueSheet = e.getValue();
 
-                String filePath = cueSheet.getFileData().get(0).getFile();
-                MediaFile base = bareFiles.get(FilenameUtils.getName(filePath));
-                boolean isFirstConsumer = bareFiles.remove(FilenameUtils.getName(filePath)) != null;
+                // One FILE block per audio file: resolve each block to its own base media file and
+                // materialise that block's tracks against it (multifile CUE support).
+                return cueSheet.getFileData().stream().flatMap(fileData -> {
+                    String filePath = fileData.getFile();
+                    MediaFile base = bareFiles.remove(FilenameUtils.getName(filePath));
 
-                if (base == null && filePath.contains("/")) {
-                    Path resolvedAudio = parent.getFullPath().resolve(filePath).normalize();
-                    if (Files.exists(resolvedAudio) && includeMediaFileByPath(resolvedAudio)) {
-                        Path relativeToFolder = folder.getPath().relativize(resolvedAudio);
-                        base = createMediaFileByFile(relativeToFolder, folder);
-                        if (base != null) {
-                            updateMediaFile(base);
-                            isFirstConsumer = true;
-                        }
-                    }
-                }
-
-                if (Objects.nonNull(base)) {
-                    if (isFirstConsumer) {
-                        base.setIndexPath(indexPath);
+                    if (Objects.nonNull(base)) {
+                        base.setIndexPath(indexPath); // update indexPath in mediaFile
                         Instant mediaChanged = FileUtil.lastModified(base.getFullPath());
                         Instant cueChanged = FileUtil.lastModified(base.getFullIndexPath());
                         base.setChanged(mediaChanged.compareTo(cueChanged) >= 0 ? mediaChanged : cueChanged);
                         updateMediaFile(base);
-                    }
-                    List<MediaFile> tracks = createIndexedTracks(base, cueSheet);
-                    tracks.forEach(t -> storedChildrenMap.remove(Pair.of(t.getPath(), t.getStartPosition())));
-                    if (isFirstConsumer) {
+                        List<MediaFile> tracks = createIndexedTracks(base, cueSheet, fileData);
+                        // remove stored children that are now indexed
+                        tracks.forEach(t -> storedChildrenMap.remove(Pair.of(t.getPath(), t.getStartPosition())));
                         tracks.add(base);
+                        return tracks.stream();
+                    } else {
+                        // A missing/unresolvable FILE block is skipped without aborting the scan; the
+                        // remaining blocks and cue sheets still materialise.
+                        LOG.warn("Could not find base file '{}' for cue sheet {}", filePath, indexPath);
+                        return Stream.<MediaFile>empty();
                     }
-                    return tracks.stream();
-                } else {
-                    LOG.warn("Could not find base file '{}' for cue sheet {}", filePath, indexPath);
-                    return Stream.empty();
-                }
-            }).collect(Collectors.toList());
-
-            // Process embedded .flac cue sheets second. Silently skip any whose
-            // base file was already consumed by an external .cue file.
-            List<MediaFile> embeddedTracks = embeddedCueSheets.entrySet().parallelStream().flatMap(e -> {
-                String indexPath = e.getKey();
-                CueSheet cueSheet = e.getValue();
-
-                String filePath = cueSheet.getFileData().get(0).getFile();
-                MediaFile base = bareFiles.get(FilenameUtils.getName(filePath));
-                boolean isFirstConsumer = bareFiles.remove(FilenameUtils.getName(filePath)) != null;
-
-                if (base == null && filePath.contains("/")) {
-                    Path resolvedAudio = parent.getFullPath().resolve(filePath).normalize();
-                    if (Files.exists(resolvedAudio) && includeMediaFileByPath(resolvedAudio)) {
-                        Path relativeToFolder = folder.getPath().relativize(resolvedAudio);
-                        base = createMediaFileByFile(relativeToFolder, folder);
-                        if (base != null) {
-                            updateMediaFile(base);
-                            isFirstConsumer = true;
-                        }
-                    }
-                }
-
-                if (Objects.nonNull(base)) {
-                    if (isFirstConsumer) {
-                        base.setIndexPath(indexPath);
-                        Instant mediaChanged = FileUtil.lastModified(base.getFullPath());
-                        Instant cueChanged = FileUtil.lastModified(base.getFullIndexPath());
-                        base.setChanged(mediaChanged.compareTo(cueChanged) >= 0 ? mediaChanged : cueChanged);
-                        updateMediaFile(base);
-                    }
-                    List<MediaFile> tracks = createIndexedTracks(base, cueSheet);
-                    tracks.forEach(t -> storedChildrenMap.remove(Pair.of(t.getPath(), t.getStartPosition())));
-                    if (isFirstConsumer) {
-                        tracks.add(base);
-                    }
-                    return tracks.stream();
-                } else {
-                    // Embedded cue was superseded by an external .cue file — this is
-                    // expected and not a problem.
-                    LOG.debug("Base file '{}' for embedded cue sheet {} already consumed by external cue", filePath, indexPath);
-                    return Stream.empty();
-                }
-            }).collect(Collectors.toList());
-
-            indexedTracks.addAll(embeddedTracks);
+                });
+            }).toList();
             result.addAll(indexedTracks);
 
             // Override parent directory metadata from CUE.
@@ -1036,13 +960,7 @@ public class MediaFileService {
         }
 
         // Exclude all hidden files starting with a single "." or "@eaDir" (thumbnail dir created on Synology devices).
-        // But allow dot-files that are valid media files (e.g., ".banbanshi - track.flac")
-        // which are common in Japanese doujin music releases.
-        if ((name.startsWith(".") && !name.startsWith("..")) || name.startsWith("@eaDir") || "Thumbs.db".equals(name)) {
-            String suffix = FilenameUtils.getExtension(name).toLowerCase();
-            return !isAudioFile(suffix) && !isVideoFile(suffix);
-        }
-        return false;
+        return (name.startsWith(".") && !name.startsWith("..")) || name.startsWith("@eaDir") || "Thumbs.db".equals(name);
     }
 
     /**
@@ -1118,11 +1036,11 @@ public class MediaFileService {
             MetaDataParser parser = metaDataParserFactory.getParser(file);
             if (parser != null) {
                 MetaData metaData = parser.getMetaData(file);
-                mediaFile.setArtist(truncate(metaData.getArtist(), MAX_VARCHAR_LENGTH));
-                mediaFile.setAlbumArtist(truncate(metaData.getAlbumArtist(), MAX_VARCHAR_LENGTH));
+                mediaFile.setArtist(metaData.getArtist());
+                mediaFile.setAlbumArtist(metaData.getAlbumArtist());
                 mediaFile.setAlbumName(metaData.getAlbumName());
                 mediaFile.setAlbumSortName(metaData.getAlbumSortName());
-                mediaFile.setTitle(truncate(metaData.getTitle(), MAX_VARCHAR_LENGTH));
+                mediaFile.setTitle(metaData.getTitle());
                 mediaFile.setSortName(metaData.getSortName());
                 mediaFile.setDiscNumber(metaData.getDiscNumber());
                 mediaFile.setDiscSubtitle(metaData.getDiscSubtitle());
@@ -1145,11 +1063,12 @@ public class MediaFileService {
                 mediaFile.setMusicBrainzReleaseId(metaData.getMusicBrainzReleaseId());
                 mediaFile.setMusicBrainzRecordingId(metaData.getMusicBrainzRecordingId());
                 mediaFile.setMusicBrainzArtistId(metaData.getMusicBrainzArtistId());
-                mediaFile.setArtistSortName(truncate(metaData.getArtistSortName(), MAX_VARCHAR_LENGTH));
+                mediaFile.setArtistSortName(metaData.getArtistSortName());
                 mediaFile.setReplayGainTrackGain(metaData.getReplayGainTrackGain());
                 mediaFile.setReplayGainAlbumGain(metaData.getReplayGainAlbumGain());
                 mediaFile.setReplayGainTrackPeak(metaData.getReplayGainTrackPeak());
                 mediaFile.setReplayGainAlbumPeak(metaData.getReplayGainAlbumPeak());
+                mediaFile.setReplayGainBaseGain(metaData.getBaseGain());
             }
             String format = StringUtils.trimToNull(StringUtils.lowerCase(FilenameUtils.getExtension(mediaFile.getPath())));
             mediaFile.setFormat(format);
@@ -1175,14 +1094,14 @@ public class MediaFileService {
                         MetaDataParser parser = metaDataParserFactory.getParser(firstChild);
                         if (parser != null) {
                             MetaData metaData = parser.getMetaData(firstChild);
-                            mediaFile.setArtist(truncate(metaData.getAlbumArtist(), MAX_VARCHAR_LENGTH));
+                            mediaFile.setArtist(metaData.getAlbumArtist());
                             mediaFile.setAlbumName(metaData.getAlbumName());
                             mediaFile.setYear(metaData.getYear());
                             mediaFile.setGenre(metaData.getGenre());
                             mediaFile.setGenres(packGenres(metaData.getGenres()));
                         }
                     } else {
-                        mediaFile.setArtist(truncate(file.getFileName().toString(), MAX_VARCHAR_LENGTH));
+                        mediaFile.setArtist(file.getFileName().toString());
                     }
                     // Look for cover art.
                     Path coverArt = findCoverArt(children);
@@ -1194,7 +1113,7 @@ public class MediaFileService {
                 } catch (IOException e) {
                     LOG.warn("Could not retrieve children for {}.", file.toString(), e);
 
-                    mediaFile.setArtist(truncate(file.getFileName().toString(), MAX_VARCHAR_LENGTH));
+                    mediaFile.setArtist(file.getFileName().toString());
                 }
             } else {
                 // root folders need to have a title
@@ -1265,7 +1184,7 @@ public class MediaFileService {
                     track.setPresent(true);
                     track.setStartPosition(chapter.getStartTimeSeconds());
                     track.setDuration(duration);
-                    track.setTrackNumber(chapter.getId() != null ? chapter.getId().intValue() : null);
+                    track.setTrackNumber(chapter.getId().intValue());
                     track.setDiscNumber(base.getDiscNumber());
                     track.setGenre(base.getGenre());
                     track.setYear(base.getYear());
@@ -1302,6 +1221,10 @@ public class MediaFileService {
 
     @Nonnull
     private List<MediaFile> createIndexedTracks(@Nonnull MediaFile base, @Nullable CueSheet cueSheet) {
+        return createIndexedTracks(base, cueSheet, getFileDataForBase(base, cueSheet));
+    }
+
+    private List<MediaFile> createIndexedTracks(@Nonnull MediaFile base, @Nullable CueSheet cueSheet, @Nullable FileData fileData) {
 
         Map<Pair<String, Double>, MediaFile> storedChildrenMap = mediaFileRepository.findByFolderAndPath(base.getFolder(), base.getPath()).parallelStream()
             .filter(MediaFile::isIndexedTrack).collect(Collectors.toConcurrentMap(i -> Pair.of(i.getPath(), i.getStartPosition()), i -> i));
@@ -1309,7 +1232,7 @@ public class MediaFileService {
         List<MediaFile> children = new ArrayList<>();
 
         try {
-            if (Objects.isNull(cueSheet)) {
+            if (Objects.isNull(cueSheet) || Objects.isNull(fileData)) {
                 base.setIndexPath(null);
                 updateMediaFile(base);
                 return children;
@@ -1328,18 +1251,13 @@ public class MediaFileService {
             Instant childrenLastUpdated = Instant.now().plusSeconds(100 * 365 * 24 * 60 * 60); // now + 100 years, tracks do not have children
             MusicFolder baseFolder = base.getFolder();
 
-            boolean update = needsUpdate(base, settingsService.isFastCacheEnabled());
-            int trackSize = cueSheet.getAllTrackData().size();
+            // Only this FILE block's tracks materialise against this base media file.
+            List<TrackData> cueTracks = fileData.getTrackData();
+            int trackSize = cueTracks.size();
 
             if (trackSize > 0) {
-                TrackData lastTrackData = cueSheet.getAllTrackData().get(trackSize - 1);
-                if (lastTrackData.getIndices().isEmpty()) {
-                    LOG.warn("Last track in CUE sheet {} has no INDEX, skipping", base.getFullIndexPath());
-                    base.setIndexPath(null);
-                    updateMediaFile(base);
-                    return children;
-                }
-                double lastTrackStart = lastTrackData.getIndices().get(0).getPosition().getMinutes() * 60 + lastTrackData.getIndices().get(0).getPosition().getSeconds() + (lastTrackData.getIndices().get(0).getPosition().getFrames() / 75);
+                TrackData lastTrackData = cueTracks.get(trackSize - 1);
+                double lastTrackStart = getStartPosition(lastTrackData);
                 if (lastTrackStart >= wholeFileLength) {
                     base.setIndexPath(null);
                     updateMediaFile(base);
@@ -1348,71 +1266,55 @@ public class MediaFileService {
             }
 
             for (int i = 0; i < trackSize; i++) {
-                TrackData trackData = cueSheet.getAllTrackData().get(i);
-                if (trackData.getIndices().isEmpty()) {
-                    LOG.warn("Track {} in CUE sheet {} has no INDEX, skipping", trackData.getNumber(), base.getFullIndexPath());
-                    continue;
-                }
-                Position currentPosition = trackData.getIndices().get(0).getPosition();
-                // convert CUE timestamp (minutes:seconds:frames, 75 frames/second) to fractional seconds
-                double currentStart = currentPosition.getMinutes() * 60 + currentPosition.getSeconds() + (currentPosition.getFrames() / 75);
-                double nextStart = 0.0;
-                if (cueSheet.getAllTrackData().size() - 1 != i) {
-                    Position nextPosition = cueSheet.getAllTrackData().get(i + 1).getIndices().get(0).getPosition();
-                    nextStart = nextPosition.getMinutes() * 60 + nextPosition.getSeconds() + (nextPosition.getFrames() / 75);
-                } else {
-                    nextStart = wholeFileLength;
-                }
+                TrackData trackData = cueTracks.get(i);
+                double currentStart = getStartPosition(trackData);
+                // duration runs to the next track in THIS block; the last track runs to the file end
+                double nextStart = (trackSize - 1 != i) ? getStartPosition(cueTracks.get(i + 1)) : wholeFileLength;
 
                 double duration = nextStart - currentStart;
 
+                // Refresh the existing indexed track in place (title/artist/track number/duration may
+                // have changed) while preserving playCount/lastPlayed/comment; create a fresh row when
+                // none exists for this start position.
                 MediaFile existingFile = storedChildrenMap.remove(Pair.of(basePath, currentStart));
-                // check whether track has same duration, cue file may have been edited to split tracks
-                if ((existingFile != null) && (existingFile.getDuration() != duration)) {
-                    storedChildrenMap.put(Pair.of(basePath, currentStart), existingFile);
-                    existingFile = null;
+                MediaFile track = (existingFile != null) ? existingFile : new MediaFile();
+                track.setPath(basePath);
+                track.setAlbumArtist(performer);
+                track.setAlbumName(albumName);
+                track.setTitle(trackData.getTitle());
+                track.setArtist(trackData.getPerformer());
+                track.setParentPath(parentPath);
+                track.setFolder(baseFolder);
+                track.setChanged(lastModified);
+                track.setLastScanned(Instant.now());
+                track.setChildrenLastUpdated(childrenLastUpdated);
+                track.setCreated(lastModified);
+                track.setPresent(true);
+                track.setTrackNumber(trackData.getNumber());
+                track.setDiscNumber(base.getDiscNumber());
+                track.setGenre(base.getGenre());
+                track.setYear(base.getYear());
+                track.setBitRate(base.getBitRate());
+                track.setVariableBitRate(base.isVariableBitRate());
+                track.setHeight(base.getHeight());
+                track.setWidth(base.getWidth());
+                track.setFormat(base.getFormat());
+                track.setStartPosition(currentStart);
+                track.setDuration(duration);
+                // estimate file size based on duration and whole file size
+                long estimatedSize = (long) (duration / wholeFileLength * wholeFileSize);
+                // if estimated size is within of whole file size, use it. Otherwise use whole file size divided by number of tracks
+                if (estimatedSize > 0 && estimatedSize <= wholeFileSize) {
+                    track.setFileSize(estimatedSize);
+                } else {
+                    track.setFileSize((long)(wholeFileSize / trackSize));
                 }
-                MediaFile track = existingFile;
-                if (update || (existingFile == null)) {
-                    track = (existingFile != null) ? existingFile : new MediaFile();
-                    track.setPath(basePath);
-                    track.setAlbumArtist(performer);
-                    track.setAlbumName(albumName);
-                    track.setTitle(trackData.getTitle());
-                    track.setArtist(trackData.getPerformer());
-                    track.setParentPath(parentPath);
-                    track.setFolder(baseFolder);
-                    track.setChanged(lastModified);
-                    track.setLastScanned(Instant.now());
-                    track.setChildrenLastUpdated(childrenLastUpdated);
-                    track.setCreated(lastModified);
-                    track.setPresent(true);
-                    track.setTrackNumber(trackData.getNumber());
-                    track.setDiscNumber(base.getDiscNumber());
-                    track.setGenre(base.getGenre());
-                    track.setYear(base.getYear());
-                    track.setBitRate(base.getBitRate());
-                    track.setVariableBitRate(base.isVariableBitRate());
-                    track.setHeight(base.getHeight());
-                    track.setWidth(base.getWidth());
-                    track.setFormat(base.getFormat());
-                    track.setStartPosition(currentStart);
-                    track.setDuration(duration);
-                    // estimate file size based on duration and whole file size
-                    long estimatedSize = (long) (duration / wholeFileLength * wholeFileSize);
-                    // if estimated size is within of whole file size, use it. Otherwise use whole file size divided by number of tracks
-                    if (estimatedSize > 0 && estimatedSize <= wholeFileSize) {
-                        track.setFileSize(estimatedSize);
-                    } else {
-                        track.setFileSize((long)(wholeFileSize / trackSize));
-                    }
-                    track.setPlayCount((existingFile == null) ? 0 : existingFile.getPlayCount());
-                    track.setLastPlayed((existingFile == null) ? null : existingFile.getLastPlayed());
-                    track.setComment((existingFile == null) ? null : existingFile.getComment());
-                    track.setMediaType(mediaType);
+                track.setPlayCount((existingFile == null) ? 0 : existingFile.getPlayCount());
+                track.setLastPlayed((existingFile == null) ? null : existingFile.getLastPlayed());
+                track.setComment((existingFile == null) ? null : existingFile.getComment());
+                track.setMediaType(mediaType);
 
-                    updateMediaFile(track);
-                }
+                updateMediaFile(track);
 
                 children.add(track);
             }
@@ -1431,6 +1333,33 @@ public class MediaFileService {
     private List<MediaFile> createIndexedTracks(MediaFile base) {
         CueSheet cueSheet = getCueSheet(base);
         return createIndexedTracks(base, cueSheet);
+    }
+
+    /**
+     * Selects the FILE block that owns the given base media file (single-file path / 2-arg overload):
+     * the block whose FILE name matches the base file name, falling back to the first block. Returns
+     * null only when the cue sheet is null or has no FILE blocks.
+     */
+    @Nullable
+    private FileData getFileDataForBase(@Nonnull MediaFile base, @Nullable CueSheet cueSheet) {
+        if (Objects.isNull(cueSheet) || cueSheet.getFileData().isEmpty()) {
+            return null;
+        }
+        String baseFileName = FilenameUtils.getName(base.getPath());
+        return cueSheet.getFileData().stream()
+            .filter(fileData -> FilenameUtils.getName(fileData.getFile()).equals(baseFileName))
+            .findFirst()
+            .orElseGet(() -> cueSheet.getFileData().get(0));
+    }
+
+    /**
+     * Converts a track's first INDEX position to fractional seconds. CUE timestamps are
+     * minutes:seconds:frames at 75 frames/second; dividing frames by 75.0 (not int 75) preserves the
+     * sub-second component that would otherwise truncate to zero.
+     */
+    private double getStartPosition(TrackData trackData) {
+        Position position = trackData.getIndices().get(0).getPosition();
+        return position.getMinutes() * 60 + position.getSeconds() + (position.getFrames() / 75.0);
     }
 
     private MediaFile.MediaType getMediaType(MediaFile mediaFile) {
@@ -1479,45 +1408,37 @@ public class MediaFileService {
             switch (ext) {
                 case "cue":
                     Charset cs = Charset.forName("UTF-8"); // default to UTF-8
-                    // Check for BOM first — BOM is a definitive indicator of UTF-8
-                    boolean bomFound = false;
+                    // attempt to detect encoding for cueFile, fallback to UTF-8
+                    int THRESHOLD = 35; // 0-100, the higher the more certain the guess
+                    CharsetDetector cd = new CharsetDetector();
                     try (FileInputStream fis = new FileInputStream(cueFile.toFile());
-                        BufferedInputStream bis = new BufferedInputStream(fis)) {
+                        BufferedInputStream bis = new BufferedInputStream(fis);) {
+                        cd.setText(bis);
+                        CharsetMatch cm = cd.detect();
+                        if (cm != null && cm.getConfidence() > THRESHOLD) {
+                            cs = Charset.forName(cm.getName());
+                        }
+                        LOG.debug("Detected charset for cuesheet file {}: Charset detected as {}", cueFile, cs);
                         bis.mark(3);
+
+                        // check for BOM
                         byte[] bom = new byte[3];
                         int bytesRead = bis.read(bom, 0, 3);
-                        if (hasBOM(bom, bytesRead)) {
-                            bomFound = true;
-                            cs = Charset.forName("UTF-8");
-                            LOG.debug("Detected BOM for cuesheet file {}, forcing UTF-8", cueFile);
-                        } else {
+                        if (!hasBOM(bom, bytesRead)) {
                             bis.reset();
                         }
-
-                        // attempt to detect encoding for cueFile, fallback to UTF-8
-                        if (!bomFound) {
-                            int THRESHOLD = 35; // 0-100, the higher the more certain the guess
-                            CharsetDetector cd = new CharsetDetector();
-                            cd.setText(bis);
-                            CharsetMatch cm = cd.detect();
-                            if (cm != null && cm.getConfidence() > THRESHOLD) {
-                                cs = Charset.forName(cm.getName());
-                            }
-                            LOG.debug("Detected charset for cuesheet file {}: Charset detected as {}", cueFile, cs);
-                            // CharsetDetector consumed the stream; re-open from file path
-                            cueSheet = CueParser.parse(cueFile, cs);
-                        } else {
-                            // BOM already consumed from bis; use the positioned stream
-                            cueSheet = CueParser.parse(bis, cs);
-                        }
+                        cueSheet = CueParser.parse(bis, cs);
                     } catch (IOException e) {
-                        LOG.warn("Error parsing cuesheet {}, defaulting to UTF-8", cueFile, e);
+                        LOG.warn("Defaulting to UTF-8 for cuesheet {}", cueFile);
                     }
-                    // Lenient parser: warnings are logged at debug level, no need to nullify cueSheet
-                    if (cueSheet != null && !cueSheet.getMessages().isEmpty()) {
-                        cueSheet.getMessages().forEach(m -> {
-                            LOG.debug("CUE parser message for {} at line {}: {}", cueFile, m.getLineNumber(), m.getMessage());
-                        });
+                    if (cueSheet != null) {
+                        if (cueSheet.getMessages().stream().filter(m -> m.toString().toLowerCase().contains("warning"))
+                                .map(m -> {
+                                    LOG.warn("Parsing {} at line {} : {}", cueFile, m.getLineNumber(), m.getMessage());
+                                    return m;
+                                }).findFirst().isPresent()) {
+                            cueSheet = null;
+                        }
                     }
                     break;
                 case "flac":
@@ -1906,17 +1827,6 @@ public class MediaFileService {
         }
         String separator = (separators == null || separators.isEmpty()) ? ";" : separators.substring(0, 1);
         return String.join(separator, clean);
-    }
-
-    /**
-     * Truncates a string to the given maximum length (in Java characters).
-     * Returns null if the input is null.
-     */
-    static String truncate(String value, int maxLength) {
-        if (value == null) {
-            return null;
-        }
-        return value.length() <= maxLength ? value : value.substring(0, maxLength);
     }
 
     /**
